force-app/main/default/objects/Course__c/fields/Active_Test__c.field-meta.xml
<CustomField>
    <fullName>Active_Test__c</fullName>
    <formula>Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Test</label>
    <type>Checkbox</type>
</CustomField>