force-app/main/default/objects/Course__c/fields/AttachmentURL__c.field-meta.xml
<CustomField>
    <fullName>AttachmentURL__c</fullName>
    <label>AttachmentURL</label>
    <type>Url</type>
</CustomField>