force-app/main/default/objects/Course__c/fields/AttachmentURL_Ext__c.field-meta.xml
<CustomField>
    <fullName>AttachmentURL_Ext__c</fullName>
    <label>AttachmentURL Ext</label>
    <length>10</length>
    <type>Text</type>
</CustomField>