force-app/main/default/objects/Course__c/fields/Baseline_Fee__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Fee__c</fullName>
    <label>Baseline Grant</label>
    <summarizedField>Course_Module__c.Baseline_Grant__c</summarizedField>
    <summaryForeignKey>Course_Module__c.Course__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>