force-app/main/default/objects/Course__c/fields/Baseline_Grant_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Grant_GST_Amount__c</fullName>
    <label>Baseline Grant GST Amount</label>
    <summarizedField>Course_Module__c.Baseline_Grant_GST_Amount__c</summarizedField>
    <summaryForeignKey>Course_Module__c.Course__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>