force-app/main/default/objects/Course__c/fields/Business_Insight__c.field-meta.xml
<CustomField>
    <fullName>Business_Insight__c</fullName>
    <label>Business Insight</label>
    <length>10</length>
    <type>Text</type>
</CustomField>