force-app/main/default/objects/Course__c/fields/Certificate_Category__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Category__c</fullName>
    <label>Certificate Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Management(BM)</fullName>
            </value>
            <value>
                <fullName>Employability skills</fullName>
            </value>
            <value>
                <fullName>Leadership &amp; People Management</fullName>
            </value>
            <value>
                <fullName>EDGE</fullName>
            </value>
            <value>
                <fullName>Funded conferences</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>