force-app/main/default/objects/Course__c/fields/Certificate_Running_No__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Running_No__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Certificate Running No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>