force-app/main/default/objects/Course__c/fields/Course_Audience__c.field-meta.xml
<CustomField>
    <fullName>Course_Audience__c</fullName>
    <description>MVP 1.0 Select the Course Audience Public Vs In-House</description>
    <inlineHelpText>Select the Course Audience Public Vs In-House</inlineHelpText>
    <label>Course Audience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-House</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>