force-app/main/default/objects/Course__c/fields/Course_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Course_Benefits__c</fullName>
    <label>Course Benefits</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>