force-app/main/default/objects/Course__c/fields/Course_Code_Running_No__c.field-meta.xml
<CustomField>
    <fullName>Course_Code_Running_No__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Course Code Running No</label>
    <type>AutoNumber</type>
</CustomField>