force-app/main/default/objects/Course__c/fields/Course_Leader__c.field-meta.xml
<CustomField>
    <fullName>Course_Leader__c</fullName>
    <label>Course Leader</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>