force-app/main/default/objects/Course__c/fields/Course_Outline__c.field-meta.xml
<CustomField>
    <fullName>Course_Outline__c</fullName>
    <label>Course Outline</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>