force-app/main/default/objects/Course__c/fields/Course_Overview__c.field-meta.xml
<CustomField>
    <fullName>Course_Overview__c</fullName>
    <label>Course Overview</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>