force-app/main/default/objects/Course__c/fields/Course_Subtitle_1__c.field-meta.xml
<CustomField>
    <fullName>Course_Subtitle_1__c</fullName>
    <label>Course Subtitle 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>