force-app/main/default/objects/Course__c/fields/Course_Subtitle_2__c.field-meta.xml
<CustomField>
    <fullName>Course_Subtitle_2__c</fullName>
    <label>Course Subtitle 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>