force-app/main/default/objects/Course__c/fields/Course_Title__c.field-meta.xml
<CustomField>
    <fullName>Course_Title__c</fullName>
    <description>MVP1.0 Course Title</description>
    <inlineHelpText>Course Title</inlineHelpText>
    <label>Course Title</label>
    <type>TextArea</type>
</CustomField>