force-app/main/default/objects/Course__c/fields/Event_Pass_IG__c.field-meta.xml
<CustomField>
    <fullName>Event_Pass_IG__c</fullName>
    <label>Event Pass IG</label>
    <length>50</length>
    <type>Text</type>
</CustomField>