force-app/main/default/objects/Course__c/fields/Event_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Event_Voucher__c</fullName>
    <label>Event Voucher</label>
    <length>10</length>
    <type>Text</type>
</CustomField>