force-app/main/default/objects/Course__c/fields/Fee_Code__c.field-meta.xml
<CustomField>
    <fullName>Fee_Code__c</fullName>
    <label>Fee Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cost_Center__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Fee_Code</valueSetName>
    </valueSet>
</CustomField>