force-app/main/default/objects/Course__c/fields/Full_Fee_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>Full_Fee_GST_Amount__c</fullName>
    <label>Full Fee GST Amount</label>
    <summarizedField>Course_Module__c.Full_Fee_GST_Amount__c</summarizedField>
    <summaryForeignKey>Course_Module__c.Course__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>