force-app/main/default/objects/Course__c/fields/Full_Fee_with_GST__c.field-meta.xml
<CustomField>
    <fullName>Full_Fee_with_GST__c</fullName>
    <formula>IF(ISPICKVAL(GST_Mode__c, &apos;Full&apos;), (Full_Fee__c +   ROUND(Full_Fee_GST_Amount__c,2)) , IF(ISPICKVAL(GST_Mode__c, &apos;Nett&apos;),Round(Full_Fee__c,2),Full_Fee__c + Round(Full_Fee_GST_Amount__c,2)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Fee with GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>