force-app/main/default/objects/Course__c/fields/Funded_Description__c.field-meta.xml
<CustomField>
    <fullName>Funded_Description__c</fullName>
    <label>Funded Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>