force-app/main/default/objects/Course__c/fields/Funded_Discontinue_Date__c.field-meta.xml
<CustomField>
    <fullName>Funded_Discontinue_Date__c</fullName>
    <label>Funded Discontinue Date</label>
    <type>Date</type>
</CustomField>