force-app/main/default/objects/Course__c/fields/Funded_Remark__c.field-meta.xml
<CustomField>
    <fullName>Funded_Remark__c</fullName>
    <label>Funded Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>