force-app/main/default/objects/Course__c/fields/Funding__c.field-meta.xml
<CustomField>
    <fullName>Funding__c</fullName>
    <description>Funding/Subsidies applicable for this Course</description>
    <label>Funding</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Funding</valueSetName>
    </valueSet>
</CustomField>