force-app/main/default/objects/Course__c/fields/IBF_Funding__c.field-meta.xml
<CustomField>
    <fullName>IBF_Funding__c</fullName>
    <formula>INCLUDES(Funding__c,&apos;IBF Funding&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IBF Funding</label>
    <type>Checkbox</type>
</CustomField>