force-app/main/default/objects/Course__c/fields/ImgAltTag__c.field-meta.xml
<CustomField>
    <fullName>ImgAltTag__c</fullName>
    <label>ImgAltTag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>