force-app/main/default/objects/Course__c/fields/Include_In_Site_Map__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Site_Map__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include In Site Map</label>
    <type>Checkbox</type>
</CustomField>