force-app/main/default/objects/Course__c/fields/Interest_Group__c.field-meta.xml
<CustomField>
    <fullName>Interest_Group__c</fullName>
    <label>Interest Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unrestricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>