force-app/main/default/objects/Course__c/fields/Learning_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Learning_Schedule__c</fullName>
    <label>Learning Schedule</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>