force-app/main/default/objects/Course__c/fields/Member_Fee__c.field-meta.xml
<CustomField>
    <fullName>Member_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Member Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>