force-app/main/default/objects/Course__c/fields/Member_Total_Fee__c.field-meta.xml
<CustomField>
    <fullName>Member_Total_Fee__c</fullName>
    <formula>IF(ISPICKVAL(GST_Mode__c, &apos;Full&apos;),Member_Fee__c + Round(Member_GST_Fee__c,2), IF(ISPICKVAL(GST_Mode__c, &apos;Nett&apos;),Round(Member_Fee__c,2),Member_Fee__c + Round(Member_GST_Fee__c,2)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If GST Mode = FULL, then this will be Member Fee + Member GST Fee
If GST Mode = NETT, then this will be Member Fee</inlineHelpText>
    <label>Member Total Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>