force-app/main/default/objects/Course__c/fields/Meta_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Meta_Keywords__c</fullName>
    <inlineHelpText>Separate each keyword with a new line.</inlineHelpText>
    <label>Meta Keywords</label>
    <type>TextArea</type>
</CustomField>