force-app/main/default/objects/Course__c/fields/Meta_Tags__c.field-meta.xml
<CustomField>
    <fullName>Meta_Tags__c</fullName>
    <inlineHelpText>Format for tag should be &quot;key&quot;:&quot;value&quot; (e.g. &quot;description&quot;:&quot;Free Web tutorials&quot;) and separate each tag with a new line.</inlineHelpText>
    <label>Meta Tags</label>
    <type>TextArea</type>
</CustomField>