force-app/main/default/objects/Course__c/fields/Meta_Title__c.field-meta.xml
<CustomField>
    <fullName>Meta_Title__c</fullName>
    <label>Meta Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>