force-app/main/default/objects/Course__c/fields/Mid_Career_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>Mid_Career_GST_Amount__c</fullName>
    <label>Mid-Career GST Amount</label>
    <summarizedField>Course_Module__c.Mid_Career_GST_Amount__c</summarizedField>
    <summaryForeignKey>Course_Module__c.Course__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>