force-app/main/default/objects/Course__c/fields/Mode_Of_Study__c.field-meta.xml
<CustomField>
    <fullName>Mode_Of_Study__c</fullName>
    <label>Mode Of Study</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Campus</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>