force-app/main/default/objects/Course__c/fields/Need_PII__c.field-meta.xml
<CustomField>
    <fullName>Need_PII__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need PII?</label>
    <type>Checkbox</type>
</CustomField>