force-app/main/default/objects/Course__c/fields/Non_Member_GST_Fee__c.field-meta.xml
<CustomField>
    <fullName>Non_Member_GST_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Non-Member GST Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>