force-app/main/default/objects/Course__c/fields/Non_Member_Total_Fee__c.field-meta.xml
<CustomField>
    <fullName>Non_Member_Total_Fee__c</fullName>
    <formula>IF(ISPICKVAL(GST_Mode__c,&apos;Full&apos;),Non_Member_Fee__c + Round(Non_Member_GST_Fee__c,2), IF(ISPICKVAL(GST_Mode__c, &apos;Nett&apos;), Round(Non_Member_Fee__c,2), Non_Member_Fee__c + Round(Non_Member_GST_Fee__c,2)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If GST Mode = FULL, then this will be Non Member Fee + Non Member GST Fee
If GST Mode = NETT, then this will be Non Member Fee</inlineHelpText>
    <label>Non-Member Total Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>