force-app/main/default/objects/Course__c/fields/Non_SME_Grant_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>Non_SME_Grant_GST_Amount__c</fullName>
    <label>Non-SME Grant GST Amount</label>
    <summarizedField>Course_Module__c.Non_SME_Grant_GST_Amount__c</summarizedField>
    <summaryForeignKey>Course_Module__c.Course__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>