force-app/main/default/objects/Course__c/fields/Old_Course_Code__c.field-meta.xml
<CustomField>
    <fullName>Old_Course_Code__c</fullName>
    <label>Old Course Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>