force-app/main/default/objects/Course__c/fields/Payment_Option__c.field-meta.xml
<CustomField>
    <fullName>Payment_Option__c</fullName>
    <label>Payment Option</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Mode_Of_Study__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MastercardVisa</fullName>
                <label>E-Payment (Mastercard/Visa/PayNow)</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Over-the-Counter (Cash/Cheque/Others)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>