force-app/main/default/objects/Course__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description>(MVP 1.0) - Course Provider. If the selected value is &quot;SIM Online&quot; it will be created in SIM Canvas</description>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>RMIT</fullName>
            </value>
            <value>
                <fullName>SIM Online</fullName>
                <isActive>false</isActive>
                <label>SIM Online</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>