force-app/main/default/objects/Course__c/fields/Provider_Status__c.field-meta.xml
<CustomField>
    <fullName>Provider_Status__c</fullName>
    <label>Provider Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Provider_Status</valueSetName>
    </valueSet>
</CustomField>