force-app/main/default/objects/Course__c/fields/Public_Course__c.field-meta.xml
<CustomField>
    <fullName>Public_Course__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public Course</label>
    <type>Checkbox</type>
</CustomField>