force-app/main/default/objects/Course__c/fields/Publish_Date__c.field-meta.xml
<CustomField>
    <fullName>Publish_Date__c</fullName>
    <label>Publish Date</label>
    <type>DateTime</type>
</CustomField>