force-app/main/default/objects/Course__c/fields/Published_Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Published_Additional_Notes__c</fullName>
    <label>Published Additional Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>