force-app/main/default/objects/Course__c/fields/Published_Course_Overview__c.field-meta.xml
<CustomField>
    <fullName>Published_Course_Overview__c</fullName>
    <label>Published Course Overview</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>