force-app/main/default/objects/Course__c/fields/Published_Learning_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Published_Learning_Schedule__c</fullName>
    <label>Published Learning Schedule</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>