force-app/main/default/objects/Course__c/fields/Published_Who_Should_Enroll__c.field-meta.xml
<CustomField>
    <fullName>Published_Who_Should_Enroll__c</fullName>
    <label>Published Who Should Enroll</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>