force-app/main/default/objects/Course__c/fields/RMIT_Alumni_Fee__c.field-meta.xml
<CustomField>
    <fullName>RMIT_Alumni_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>RMIT Alumni Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>