force-app/main/default/objects/Course__c/fields/RMIT_Total_Fee__c.field-meta.xml
<CustomField>
    <fullName>RMIT_Total_Fee__c</fullName>
    <formula>IF(ISPICKVAL(GST_Mode__c, &apos;Full&apos;), RMIT_Alumni_Fee__c + Round(RMIT_Alumni_GST_Fee__c,2) , IF(ISPICKVAL(GST_Mode__c, &apos;Nett&apos;),RMIT_Alumni_Fee__c,RMIT_Alumni_Fee__c + Round(RMIT_Alumni_GST_Fee__c,2)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RMIT Alumni Total Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>