force-app/main/default/objects/Course__c/fields/Self_Paced_Access_Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>Self_Paced_Access_Duration_Months__c</fullName>
    <label>Self Paced Access Duration (Months)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>