force-app/main/default/objects/Course__c/fields/SkillsFuture_Credit__c.field-meta.xml
<CustomField>
    <fullName>SkillsFuture_Credit__c</fullName>
    <formula>INCLUDES(Funding__c,&apos;SkillsFuture Credit&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SkillsFuture Credit</label>
    <type>Checkbox</type>
</CustomField>