force-app/main/default/objects/Course__c/fields/SkillsFuture_Funding__c.field-meta.xml
<CustomField>
    <fullName>SkillsFuture_Funding__c</fullName>
    <formula>INCLUDES(Funding__c, &apos;SkillsFuture Funding&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SkillsFuture Funding</label>
    <type>Checkbox</type>
</CustomField>