force-app/main/default/objects/Course__c/fields/SME_Fee__c.field-meta.xml
<CustomField>
    <fullName>SME_Fee__c</fullName>
    <label>SME Grant</label>
    <summarizedField>Course_Module__c.SME_Grant__c</summarizedField>
    <summaryForeignKey>Course_Module__c.Course__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>