force-app/main/default/objects/Course__c/fields/SME_Grant_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>SME_Grant_GST_Amount__c</fullName>
    <label>SME Grant GST Amount</label>
    <summarizedField>Course_Module__c.SME_Grant_GST_Amount__c</summarizedField>
    <summaryForeignKey>Course_Module__c.Course__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>