force-app/main/default/objects/Course__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <defaultValue>&quot;(Level 1) Executive&quot; &amp; BR() &amp;
&quot;(Level 2) Test&quot;</defaultValue>
    <label>Test</label>
    <type>TextArea</type>
</CustomField>