force-app/main/default/objects/Course__c/fields/ThumbnailURL__c.field-meta.xml
<CustomField>
    <fullName>ThumbnailURL__c</fullName>
    <label>ThumbnailURL</label>
    <type>Url</type>
</CustomField>