force-app/main/default/objects/Course__c/fields/ThumbnailURL_Ext__c.field-meta.xml
<CustomField>
    <fullName>ThumbnailURL_Ext__c</fullName>
    <label>ThumbnailURL Ext</label>
    <length>10</length>
    <type>Text</type>
</CustomField>