force-app/main/default/objects/Course__c/fields/To_Publish__c.field-meta.xml
<CustomField>
    <fullName>To_Publish__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Karan - Will be deleted after courses are published to production</description>
    <label>To Publish</label>
    <type>Checkbox</type>
</CustomField>