force-app/main/default/objects/Course__c/fields/UTAP_Funding__c.field-meta.xml
<CustomField>
    <fullName>UTAP_Funding__c</fullName>
    <formula>INCLUDES(Funding__c,&apos;UTAP Funding&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UTAP Funding</label>
    <type>Checkbox</type>
</CustomField>