force-app/main/default/objects/Course__c/fields/Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Valid_From__c</fullName>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>