force-app/main/default/objects/Course__c/fields/Who_Should_Enroll__c.field-meta.xml
<CustomField>
    <fullName>Who_Should_Enroll__c</fullName>
    <label>Who Should Enrol</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>