force-app/main/default/objects/Course__c/fields/Who_Should_Enroll_MPL__c.field-meta.xml
<CustomField>
    <fullName>Who_Should_Enroll_MPL__c</fullName>
    <label>Who Should Enrol</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1 - Admin &amp; Support</fullName>
            </value>
            <value>
                <fullName>Level 2 - Supervisor, Executive, &amp; Emerging Managers</fullName>
            </value>
            <value>
                <fullName>Level 3 - New Managers</fullName>
            </value>
            <value>
                <fullName>Level 4 - Managers</fullName>
            </value>
            <value>
                <fullName>Level 5 - Senior Managers &amp; Directors</fullName>
            </value>
            <value>
                <fullName>Level 6 - C-Suite</fullName>
            </value>
            <value>
                <fullName>(Level 1)</fullName>
                <isActive>false</isActive>
                <label>(Level 1)</label>
            </value>
            <value>
                <fullName>(Level 2)</fullName>
                <isActive>false</isActive>
                <label>(Level 2)</label>
            </value>
            <value>
                <fullName>(Level 3)</fullName>
                <isActive>false</isActive>
                <label>(Level 3)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>