force-app/main/default/objects/Course__c/fields/Workfare_Fee__c.field-meta.xml
<CustomField>
    <fullName>Workfare_Fee__c</fullName>
    <label>Workfare Grant</label>
    <summarizedField>Course_Module__c.Workfare__c</summarizedField>
    <summaryForeignKey>Course_Module__c.Course__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>