force-app/main/default/objects/Course__c/fields/Workfare_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>Workfare_GST_Amount__c</fullName>
    <label>Workfare GST Amount</label>
    <summarizedField>Course_Module__c.Workfare_GST_Amount__c</summarizedField>
    <summaryForeignKey>Course_Module__c.Course__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>