force-app/main/default/objects/Course__c/recordTypes/Event.recordType-meta.xml
<RecordType>
    <fullName>Event</fullName>
    <active>true</active>
    <description>Event Records</description>
    <label>Event</label>
</RecordType>