force-app/main/default/objects/Course__c/recordTypes/Funded_Course.recordType-meta.xml
<RecordType>
    <fullName>Funded_Course</fullName>
    <active>true</active>
    <description>Courses with SSG Modules</description>
    <label>Funded Course</label>
</RecordType>