force-app/main/default/objects/Course__c/validationRules/Amount_has_to_be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_has_to_be_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Non_Member_Fee__c &lt; 0 ||  Non_Member_GST_Fee__c &lt; 0 || Member_Fee__c &lt; 0 ||  Member_GST_Fee__c &lt; 0</errorConditionFormula>
    <errorMessage>Amounts have to be positive</errorMessage>
</ValidationRule>