force-app/main/default/objects/Course__c/validationRules/Lock_Course.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Course</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(PRIORVALUE(Publish_Status__c), &quot;Submitted for Creation Review&quot;),
ISPICKVAL(PRIORVALUE(Publish_Status__c), &quot;Pending Creation Review&quot;),
ISPICKVAL(PRIORVALUE(Publish_Status__c), &quot;Submitted for Update Review&quot;),
ISPICKVAL(PRIORVALUE(Publish_Status__c), &quot;Pending Update Review&quot;),
ISPICKVAL(PRIORVALUE(Publish_Status__c), &quot;Submitted for Unpublish Review&quot;)), $Profile.Name &lt;&gt; &quot;System Administrator&quot;, $Profile.Name &lt;&gt; &quot;Integration Profile&quot;, NOT(ISCHANGED( Public_Course__c)), NOT(ISCHANGED(Provider_Status__c)))</errorConditionFormula>
    <errorMessage>Record is locked and you are not allowed to change this record.</errorMessage>
</ValidationRule>