force-app/main/default/objects/Course__c/validationRules/Provider_cannot_be_modified.validationRule-meta.xml
<ValidationRule>
    <fullName>Provider_cannot_be_modified</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL( Provider_Status__c , &quot;Draft&quot;)),ISCHANGED( Provider__c))</errorConditionFormula>
    <errorMessage>Course has been published to this provider and Provider can’t be changed after this operation.</errorMessage>
</ValidationRule>