force-app/main/default/objects/Course__c/validationRules/Valid_To_must_be_later_than_Valid_From.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_To_must_be_later_than_Valid_From</fullName>
    <active>true</active>
    <errorConditionFormula>Valid_From__c &gt; Valid_To__c</errorConditionFormula>
    <errorMessage>Valid To must be later than Valid From</errorMessage>
</ValidationRule>